pihole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
  annotations:
    cert-manager.io/cluster-issuer: acme-cluster-issuer
spec:
  rules:
  - host: pihole.atomflare.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole
            port:
              name: dashboard
  tls:
  - hosts:
    - pihole-cimsi.atomflare.net
    secretName: atomflare-tls
